--- a/templates/administration/add/invoice.html
+++ b/templates/administration/add/invoice.html
@@ -4,18 +4,81 @@
     <meta charset="UTF-8">
     <title>Generate estimate</title>
     <style>
+        .header-cell {
+            text-align: center;
+            padding-left: 15px;
+            height: 35px;
+            font-size: 12px;
+            border: 1px solid rgb(255, 188, 156);
+            background-color: rgb(255, 188, 156);
+        }
+
+        .data-cell {
+            border: 1px solid rgb(255, 188, 156);
+            text-align: center;
+            height: 35px;
+            padding-left: 15px;
+            font-size: 12px;
+        }
+
+        .summary-common {
+            height: 25px;
+            font-size: 12px;
+            padding-left: 15px;
+            color: rgb(47, 47, 47);
+        }
+
+        .summary-cell {
+            text-align: center;
+        }
+
+        .first {
+            text-align: right !important;
+        }
+
+        a {
+            color: black;
+            text-decoration: underline;
+        }
+
+        #header_frame {
+            width: 1000pt;
+        }
+
+        #header_frame_left {
+            line-height: 0.3em;
+            font-size: 12px
+        }
+
+        #header_frame_right {
+            text-align: right;
+            line-height: 0.3em;
+            font-size: 12px
+        }
+
+        h1 {
+            font-size: 35px;
+            color: rgb(248, 124, 84);
+            text-align: right;
+            letter-spacing: 5px
+        }
+
+        .text_bold {
+            font-weight: bold;
+        }
+
         @page {
             size: a4 portrait;
-            @frame logo_frame {
-                -pdf-frame-content: logo_frame;
-                left: 0pt;
-                right: 0pt;
-                top: 0pt;
+            @frame header_frame {
+                -pdf-frame-content: header_frame;
+                left: 0;
+                right: 0;
+                top: 0;
                 height: 500pt;
             }
-            @frame pd_title {
+            @frame pdf_title {
                 /* Static Frame */
-                -pdf-frame-content: pd_title;
+                -pdf-frame-content: pdf_title;
                 left: 286pt;
                 width: 230pt;
                 top: 120pt;
@@ -43,7 +106,7 @@
                 /* Content Frame */
                 left: 30pt;
                 width: 512pt;
-                top: 330pt;
+                top: 300pt;
                 height: 632pt;
             }
 
@@ -51,7 +114,7 @@
                 -pdf-frame-content: footer_frame;
                 left: 30pt;
                 width: 410pt;
-                bottom: 0pt;  /* Position at the bottom */
+                bottom: 0;  /* Position at the bottom */
                 height: 120pt; /* Adjust height to fit contents */
             }
 
@@ -59,7 +122,7 @@
                 -pdf-frame-content: footer_content;
                 left: 30pt;
                 right: 0;
-                bottom: 0pt;  /* Position at the bottom */
+                bottom: 0;  /* Position at the bottom */
                 height: 123.5pt; /* Adjust height to fit contents */
             }
         }
@@ -68,22 +131,22 @@
 </head>
 <body>
 <!-- Content for Static Frame 'header_frame' -->
-<div id="logo_frame">
-    <img src="{{ header }}" alt="" style="width: 1000pt">
+<div id="header_frame">
+    <img src="{{ header }}">
 </div>
 
-<div id="pd_title">
-    <h1 style="font-size: 35px; color: rgb(248, 124, 84); text-align: right; letter-spacing: 5px">INVOICE</h1>
+<div id="pdf_title">
+    <h1>INVOICE</h1>
 </div>
 
-<div id="header_frame_left" style="line-height: 0.5em; font-size: 14px">
+<div id="header_frame_left">
     <p>{{ client_name }}</p>
     <p>{{ client_email }}</p>
     <p>{{ client_phone }}</p>
 </div>
 
-<div id="header_frame_right" style="text-align: right; line-height: 0.4em; font-size: 13px">
-    <p>Invoice Number: # <a href="{{ url }}">{{ invoice_number }}</a></p>
+<div id="header_frame_right">
+    <p>Invoice Number: #<a href="{{ url }}">{{ invoice_number }}</a></p>
     <p>Invoice Date: {{ invoice_date|date }}</p>
     {% if due_date %}
         <p>Due Date: {{ due_date|date }}</p>
@@ -92,32 +155,67 @@
 
 <div>
     <table>
-        <thead style="font-size: 14px; background-color: rgb(255, 188, 156)">
-        <th style="background-color: rgb(255, 188, 156); height: 55px; width: 250pt; text-align: left; padding-left: 15px">
-            Item Description
-        </th>
-        <th style="background-color: rgb(255, 188, 156)">Price</th>
-        <th style="background-color: rgb(255, 188, 156)">Quantity</th>
-        <th style="background-color: rgb(255, 188, 156)">Subtotal</th>
+        <thead>
+        <tr>
+            <th class="header-cell">Item Description</th>
+            <th class="header-cell">Price</th>
+            <th class="header-cell">Quantity</th>
+            <th class="header-cell">Subtotal</th>
+        </tr>
         </thead>
-        <tbody style="font-size: 14px; background-color: rgb(255, 188, 156)">
+        <tbody>
         {% for service in services %}
-            <tr style="font-size: 14px; border: 1px solid rgb(255, 188, 156)">
-                <td style="text-align: left; height: 55px; padding-left: 15px; width: 250pt">{{ service.service_name }}</td>
-                <td style="text-align: center; height: 55px">${{ service.service_price }}</td>
-                <td style="text-align: center; height: 55px">{{ service.service_quantity }}</td>
-                <td style="text-align: center; height: 55px">${{ service.get_subtotal }}</td>
+            <tr>
+                <td class="data-cell">{{ service.service_name }}</td>
+                <td class="data-cell">${{ service.service_price }}</td>
+                <td class="data-cell">{{ service.service_quantity }}</td>
+                <td class="data-cell">${{ service.get_subtotal }}</td>
             </tr>
         {% endfor %}
-        <tr style="font-size: 14px; background-color: rgb(255, 188, 156)">
-            <td style="background-color: rgb(255, 188, 156); height: 55px; width: 250pt; text-align: left; padding-left: 15px"></td>
-            <td style="background-color: rgb(255, 188, 156)"></td>
-            <td style="background-color: rgb(255, 188, 156); text-align: center;"><b>Total</b></td>
-            <td style="background-color: rgb(255, 188, 156); text-align: left; padding-left: 15px">${{ total }}</td>
-        </tr>
         </tbody>
     </table>
-    <div id="payment_frame_left" style="line-height: 0.5em; font-size: 14px; padding-top: 10px; margin-bottom: 10px">
+
+
+    <!-- Summary Section -->
+    <table style="margin-top: 40px">
+        <tr>
+            <td></td>
+            <td></td>
+            <td class="first summary-common">Total</td>
+            <td class="summary-cell summary-common">${{ total }}</td>
+        </tr>
+        {% if discount_percent %}
+            <tr>
+                <td></td>
+                <td></td>
+                <td class="first summary-common">Discount -{{ discount_percent }}%</td>
+                <td class="summary-cell summary-common">-${{ discount_value }}</td>
+            </tr>
+        {% endif %}
+        {% if tax_percent %}
+            <tr>
+                <td></td>
+                <td></td>
+                <td class="first summary-common">Tax {{ tax_percent }}%</td>
+                <td class="summary-cell summary-common">${{ tax_value }}</td>
+            </tr>
+        {% endif %}
+        <tr>
+            <td></td>
+            <td></td>
+            <td class="first summary-common">Amount Paid</td>
+            <td class="summary-cell summary-common">{% if amount_paid > 0 %}-{% endif %}${{ amount_paid }}</td>
+        </tr>
+        <tr class="text_bold">
+            <td></td>
+            <td></td>
+            <td class="first summary-common">Amount Due (USD)</td>
+            <td class="summary-cell summary-common">${{ balance_due }}</td>
+        </tr>
+    </table>
+
+
+    <div id="payment_frame_left" style="line-height: 0.5em; font-size: 14px; padding-top: 100px; margin-bottom: 10px">
         <p>Payment method: {{ payment_method }}</p>
     </div>
     <div id="payment_frame_right"
